# ai-mcp-server

./: .gitignore  .keys.example  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  README.zh-TW.md  cli.js  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Formula/: ai-mcp-server.rb
docs/prd/ai-mcp-server-v1/: index.html
scripts/: generate_probe_assets.py  verify_mcp_server.py  verify_nvidia.py
src/ai_mcp_server/: __init__.py  cli.py  server.py
src/ai_mcp_server/application/: __init__.py  capability_query.py  client_config.py  endpoint_service.py  init_wizard.py  invoke_service.py  manual_models.py  meta_service.py  metrics.py  model_discovery.py  override_service.py  performance_query.py  probe_jobs.py  worker.py
src/ai_mcp_server/capability/: __init__.py  litellm_meta.py  resolver.py  static_map.py
src/ai_mcp_server/i18n/: __init__.py  en.py  zh_sc.py  zh_tc.py
src/ai_mcp_server/models/: __init__.py  enums.py  schemas.py
src/ai_mcp_server/probes/: __init__.py  audio_stt.py  audio_tts.py  base.py  embedding.py  image_gen.py  json_mode.py  reasoning.py  rerank.py  text_chat.py  tool_call.py  vision.py
src/ai_mcp_server/providers/: __init__.py  base.py  factory.py  openai_compat.py
src/ai_mcp_server/storage/: __init__.py  crypto.py  dao.py  db.py
src/ai_mcp_server/utils/: path_util.py  paths.py
src/ai_mcp_server/web/: app.py  form_utils.py  token_middleware.py
src/ai_mcp_server/web/routes/: dashboard.py  endpoints.py  jobs.py  meta.py  models.py  overrides.py  probes.py
src/ai_mcp_server/web/static/: app.css
src/ai_mcp_server/web/templates/: base.html  dashboard.html  endpoint_detail.html  endpoints.html  jobs.html  meta.html  model_detail.html  models.html  overrides.html  probes.html
tests/: conftest.py
tests/integration/: test_worker_concurrency.py
tests/unit/: test_client_config.py  test_crypto.py  test_endpoint_service.py  test_image_gen_probe.py  test_manual_models.py  test_metrics.py  test_openai_compat.py  test_path_util.py  test_performance_query.py  test_probe_jobs.py  test_resolver.py  test_web_endpoints.py  test_web_models.py  test_web_security.py  test_worker_logging.py
